--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,10 @@
         android:theme="@style/Theme.IntentApp"
         tools:targetApi="31">
         <activity
-            android:name=".ThirdActivity"
+            android:name=".ThirdActivityJava"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SecondActivity"
+            android:name=".MainActivityJava"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SecondActivityJava"
+            android:exported="false"/>
     </application>
 
 </manifest>
